2.0.3
	+ Added persist after X seconds to send an event when the value is
	  in the notification area for more than X seconds
	+ Include conf.d directory only if this exists
2.0.2
	+ Fixed _syncRows method from MeasureWatchers to not mark the module
	  as changed
	+ Now adding thresholds is more resilent to lower number of
	  passed parameters
	+ Added missing dependency on rrdtool
2.0.1
	+ Df measure now monitorizes file systems in /media and never
	  monitorizes read-only filesystems (except root)
	+ Monitor tolerates missing rrds
1.5.6
	+ Bugfix: Several thresholds for the same measure now works
	+ Bugfix: Removing a maximum/minimum when updating a threshold
	  works again
	+ Added titles with breadcrumbs for threshold configuration and
	  monitor watchers
	+ Allow to create thresholds differencing them only in the data
	  source
	+ Monitor alerts now shows the gauge measure including several
	  suffixes and prints only, if required, 3 decimal points
	+ Bugfix threshold configuration when a measure has been removed
	+ Add millisecond and bps gauge types
	+ Add include for more configuration files
	+ Register measures on demand using a ini file
1.5.5
	+ Zentyal rebrand
1.5.4
	+ Notify when values return to normal as info event
	+ Add upstart script in order to workaround a packaging bug in Lucid
	+ Make notification work again in Lucid
	+ Bugfix: The notificate passed the classes correctly to event
	  watcher using escaping
	+ Disabled collectd.log to avoid infinite growth, syslog is still used
1.5.3
	+ Added exception class for threshold overrides
	+ Bugfix: solved problem when adding thresholds without using a CGI
1.5.2
	+ Use init.d script instead of upstart to avoid errors in syslog
	+ Removed loading of no longer used perl plugin
1.5.1
	+ Depends on @remoteservices@ package if the host is subscribed to
	  eBox Control Center to send them the stats using the appropiate IP
	  address to send stats to
1.5